Update todos, new lsp configs, and more

--- a/gui/.config/kitty/kitty.conf
+++ b/gui/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
-font_family      Fira Code
-bold_font        Fira Code bold
-italic_font      Fira Code italic
-bold_italic_font Fira Code bold italic
+font_family      Fira Code Regular Nerd Font Complete Mono
+bold_font        Fira Code Bold Nerd Font Complete Mono
+italic_font      Fira Code Light Nerd Font Complete Mono
+bold_italic_font Fira Code SemiBold Nerd Font Complete Mono
 
 font_size 13
 background_opacity 1.0
